@@ -1171,6 +1171,6 @@
 	<Globals>
 		<Global
 			Name="RESOURCE_FILE"
-			Value="\Development\Svn\TortoiseSVN\src\Resources\TortoiseProcENG.rc"/>
+			Value="\Development\Subversion\TortoiseSVN\src\Resources\TortoiseProcENG.rc"/>
 	</Globals>
 </VisualStudioProject>
