@@ -1,3 +1,5 @@
+- ADD: Possibility to delete mutliple selected files at
+       once in the repository browser. (Stefan)
 - CHG: Better colorization in the blame viewer. (Simon Large)
 - BUG: Some dialogs in the repobrowser had the accelerator
        ampersand char in their title. (Stefan)
